# Wheeler-Graph-Application

./: README.md  index.html  package.json  vite.config.js
algorithms/: README  enhancedMultiStringWheelerGraph.py  extra.py  find_ordering.py  find_ordering2.py  getMultiStringWheelerGraph.py  getOILC.py  getOILCbasic.py  getSingleStringWheelerGraph.py  getTrieWheelerGraph.py  getWheelerGraph.py  get_num_pattern_matches.py  graph_from_vectors.py  graph_utils.py  has_cycle.py  is_wheeler.py  main.py  ordered_wheeler_property.py  requirements.txt  test_find_ordering.py  test_has_cycle.py  test_is_wheeler.py
algorithms/caml/: make.sh
algorithms/caml/src/: dune  find_ordering.ml  graph_utils.ml  order.ml  permutations.ml
algorithms/unit_test_files/: simple_true1.txt
algorithms/unused_scripts/: enhancedMultiStringWheelerGraph.py  getMultiStringWheelerGraph.py
src/: App.jsx  main.jsx  styles.css  url.js
src/algorithms/: wheeler.py  wheelerproperty.py
src/components/: Graph.jsx  InteractiveGraph.jsx  InteractiveGraphWithOILC.jsx  NavBar.jsx  PatternMatchingTutorial.jsx  PopUps.jsx  StressFlow.jsx  TextBox.jsx
src/pages/: Home.jsx  PatternMatch.jsx  Tutorial.jsx  Visualize.jsx  WheelerProperty.jsx
submission/: who_did_what.txt
submission/algorithms/: README  find_ordering.py  getOILC.py  getSingleStringWheelerGraph.py  graph_from_vectors.py  graph_utils.py  has_cycle.py  is_wheeler.py  main.py  ordered_wheeler_property.py  test_has_cycle.py  (+2 more)
test/: test_is_wheeler.py
test data/: alpha.fa.txt  delta.fa.txt  hat.txt  hit.txt  omicron.txt  vis.csv  visualize.txt
(+47 files in other folders)
